<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fruits"
            android:icon="@drawable/fruits"
            android:title="@string/menu_fruits" />
        <item
            android:id="@+id/nav_vegetables"
            android:icon="@drawable/vegetables"
            android:title="@string/menu_vegetables" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menuSignOut" />
    </group>
</menu>