<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.delcampofresco.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_fruits"
        android:name="com.example.delcampofresco.ui.fruits.FruitsFragment"
        android:label="@string/menu_fruits"
        tools:layout="@layout/fragment_fruits" />

    <fragment
        android:id="@+id/nav_vegetables"
        android:name="com.example.delcampofresco.ui.vegetables.VegetablesFragment"
        android:label="@string/menu_vegetables"
        tools:layout="@layout/fragment_vegetables" />

</navigation>